# create_leptos

./: Cargo.toml
src/: app.rs  lib.rs  main.rs
style/: style.css
