[package]
name = "leptos_hydrate_test_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib", "rlib"]
[dependencies]
actix-web = { version = "4.4.1", optional = true }
leptos_actix = { version = "0.5.6", optional = true }
leptos = { version = "0.5.6" }
leptos_meta = { version = "0.5.6"}
leptos_router = { version = "0.5.6"}
actix-files = { version = "0.6.5", optional = true }

console_error_panic_hook = {version="0.1.7",optional = true}
 
wasm-bindgen = { version="0.2.90",optional=true}


[features]
default=["ssr","hydrate"] #This is just for code opacity problem
ssr=["dep:actix-web","dep:actix-files","dep:leptos_actix","leptos/ssr","leptos_meta/ssr","leptos_router/ssr"]
hydrate=["leptos/hydrate","leptos_meta/hydrate","leptos_router/hydrate","dep:wasm-bindgen","dep:console_error_panic_hook"]


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
strip = true
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-04"]


[package.metadata.leptos]
name="leptos_hydrate_test_1"
bin-features=["ssr"]
lib-features=["hydrate"]
style-file = "style/style.css"
assets-dir = "assets"
